--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "atrium-tests",
+  "name": "atrium-tests-2",
   "private": true,
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@9.12.3",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "turbo dev",
     "build": "turbo build",
