--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@atrium/ui": "workspace:*",
+    "@supabase/supabase-js": "^2.76.1",
     "next": "15.5.6",
+    "posthog-js": "^1.280.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -13,7 +15,8 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
