chore: close Step 0 — scripts, local sanity and initial deploy setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "dev": "turbo dev --filter=web",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky",
