--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,10 @@
     "dev": "tsc -w -p tsconfig.json",
     "lint": "echo \"(ui lint placeholder)\""
   },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
   "devDependencies": {
     "typescript": "^5.9.3",
     "@types/react": "^19.2.2",
