--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "typescript": "^5.9.3",
+    "tslib": "^2.6.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.1.5"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
     "rimraf": "^6.0.1"
   },
   "peerDependencies": {
