feat(web): add PostHogProvider and wire it in layout; ensure @ alias

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,9 +4,9 @@
     "jsx": "preserve",
     "moduleResolution": "Bundler",
     "plugins": [{ "name": "next" }],
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["*"],
       "@ui/*": ["../../packages/ui/src/*"]
     },
     "lib": ["dom", "dom.iterable", "esnext"],
