--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "tsx": "^4.17.0",
     "turbo": "^2.0.0",
     "typescript": "^5.6.0",
-    "typescript-eslint": "^8.46.2"
+    "typescript-eslint": "^8.46.2",
+    "next": "15.5.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "pnpm": {
     "overrides": {}
