--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,8 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["packages/ui/src/*"]
+      "@ui/*": ["packages/ui/src/*"],
+      "@/*": ["./*"]
     }
   }
 }
